# dataops-testgen

./: .dockerignore  .gitignore  .invoke.yml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATA_CONTRACT.md  Dockerfile  NOTICE  README.md  docker-compose.local.yml  docker-compose.yml  index.yaml  pyproject.toml  setup.py  tasks.py  testgen-0.1.0.tgz  testgen-0.1.1.tgz  testgen-1.0.0.tgz  testgen-1.0.1.tgz  testgen-1.1.0.tgz  testgen-1.2.0.tgz  testgen-services-0.1.0.tgz  testgen-services-0.1.1.tgz  testgen-services-1.0.1.tgz
.ai/: contract-implementation-plan.md  contract-lifecycle-design.md  data_contract_redesign.html
.github/actions/publish_charts/: action.yaml
.github/workflows/: pull_request.yml  python-job.yml  release.yaml
deploy/: build_api_docs.py  build_docs.py  build_mcp_docs.py  docker-bake.hcl  docker-bake.json  docker-compose.yml  generate_third_party_notices.py  install_arrow.sh  install_linuxodbc.sh  testgen-base.dockerfile  testgen.dockerfile
deploy/charts/: README.md
deploy/charts/testgen-app/: Chart.yaml  values.yaml
deploy/charts/testgen-services/: Chart.yaml  values.yaml
deploy/charts_values/: values-app-dev.yaml
docs/: 2026-04-15-create-new-contract-wizard-design.md  configuration.md  contract_snapshot_suite_design.md  data_contract.md  data_contract_prd.md  local_development.md
docs/specs/: 2026-04-15-data-contracts-list-design.md
docs/superpowers/plans/: 2026-04-07-coverage-matrix-redesign.md  2026-04-08-contract-term-differences.md  2026-04-16-schema-property-editor.md
docs/superpowers/specs/: 2026-04-07-coverage-matrix-redesign.md  2026-04-07-unsaved-changes-banner-design.md  2026-04-08-data-contract-differences-design.md  2026-04-16-schema-property-editor-design.md  prototype-data-contract-differences.html
invocations/: __init__.py  ci.py  dev.py  toolbox.py
testgen/: __main__.py  settings.py
testgen/api/: app.py  deps.py  jobs.py  runs.py  schemas.py  test_definition_service.py  test_definitions.py
testgen/api/oauth/: login.py  metadata.py  models.py  routes.py  server.py
testgen/commands/: contract_management.py  contract_snapshot_suite.py  contract_staleness.py  contract_term_diff.py  contract_versions.py  create_data_contract.py  exec_job.py  export_data_contract.py  import_data_contract.py  job_registry.py  job_runner.py  odcs_contract.py  run_execute_cat_tests.py  run_execute_tests.py  run_generate_tests.py  run_get_entities.py  run_launch_db_config.py  run_observability_exporter.py  run_pairwise_contingency_check.py  run_profiling.py  run_profiling_bridge.py  run_quick_start.py  run_recalculate_project_scores.py  run_refresh_data_chars.py  run_refresh_score_cards_results.py  run_rollup_scores.py  run_score_update.py  run_setup_profiling_tools.py  run_test_definition.py  run_test_execution.py  run_test_metadata_exporter.py  run_test_parameter_validation.py  run_test_validation.py  run_upgrade_db_config.py  test_generation.py  test_thresholds_prediction.py
testgen/commands/queries/: contingency_query.py  execute_cat_tests_query.py  execute_tests_query.py  generate_tests_query.py  profiling_query.py  refresh_data_chars_query.py  rollup_scores_query.py  test_parameter_validation_query.py
testgen/common/: __init__.py  auth.py  clean_sql.py  credentials.py  date_service.py  display_service.py  docker_service.py  email.py  encrypt.py  enums.py  freshness_service.py  get_pipeline_parms.py  job_context.py  logs.py  mixpanel_service.py  pii_masking.py  process_service.py  read_file.py  read_yaml_metadata_records.py  source_data_service.py  standalone_postgres.py  time_series_service.py  version_service.py
testgen/common/database/: __init__.py  database_service.py
testgen/common/models/: __init__.py  connection.py  custom_types.py  data_column.py  data_table.py  entity.py  hygiene_issue.py  job_execution.py  notification_settings.py  profile_result.py  profiling_run.py  project.py  project_membership.py  scheduler.py  scores.py  settings.py  table_group.py  test_definition.py  test_result.py  test_run.py  test_suite.py  user.py
testgen/common/notifications/: base.py  monitor_run.py  notifications.py  profiling_run.py  score_drop.py  test_run.py
testgen/mcp/: __init__.py  auth.py  exceptions.py  permissions.py  server.py
testgen/mcp/prompts/: workflows.py
testgen/mcp/services/: inventory_service.py
testgen/mcp/tools/: __init__.py  common.py  discovery.py  execution.py  hygiene_issues.py  markdown.py  profiling.py  reference.py  source_data.py  test_definitions.py  test_results.py  test_runs.py
testgen/scheduler/: __init__.py  base.py  cli_scheduler.py
testgen/server/: __init__.py
testgen/template/contingency/: contingency_columns.sql  contingency_counts.sql
testgen/template/data_chars/: data_chars_staging_delete.sql  data_chars_update.sql
testgen/template/dbsetup/: 010_create_base_schema.sql  020_create_standard_functions_sprocs.sql  030_initialize_new_schema_structure.sql  040_populate_new_schema_project.sql  050_populate_new_schema_metadata.sql  055_recreate_metadata_constraints.sql  060_create_standard_views.sql  070_create_default_users.sql  075_grant_role_rights.sql  080_set_current_revision.sql
testgen/template/dbsetup_anomaly_types/: profile_anomaly_types_Boolean_Value_Mismatch.yaml  profile_anomaly_types_Char_Column_Date_Values.yaml  profile_anomaly_types_Char_Column_Number_Units.yaml  profile_anomaly_types_Char_Column_Number_Values.yaml  (+32 more)
testgen/ui/: app.py  assets.py  auth.py  bootstrap.py  forms.py  session.py  utils.py
testgen/utils/: __init__.py  plugins.py  singleton.py
tests/fixtures/: odcs_failure.yaml  odcs_positive.yaml
tests/unit/: conftest.py  test_common_email.py  test_monitor_run_notifications.py  test_notification_settings.py  test_profiling_query.py  test_profiling_run_notifications.py  test_read_file.py  test_refresh_data_chars_query.py  test_run_observability_exporter.py  test_scheduler_base.py  test_scheduler_cli.py  test_score_drop_notifications.py  test_test_run_notifications.py  test_utils.py  test_version_service.py
(+892 files in other folders)
